--- a/Cookie/Cookie/CKRecipeEditionView.xib
+++ b/Cookie/Cookie/CKRecipeEditionView.xib
@@ -2,13 +2,13 @@
 <archive type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="8.00">
 	<data>
 		<int key="IBDocument.SystemTarget">1060</int>
-		<string key="IBDocument.SystemVersion">11E53</string>
-		<string key="IBDocument.InterfaceBuilderVersion">2182</string>
-		<string key="IBDocument.AppKitVersion">1138.47</string>
-		<string key="IBDocument.HIToolboxVersion">569.00</string>
+		<string key="IBDocument.SystemVersion">10K549</string>
+		<string key="IBDocument.InterfaceBuilderVersion">1938</string>
+		<string key="IBDocument.AppKitVersion">1038.36</string>
+		<string key="IBDocument.HIToolboxVersion">461.00</string>
 		<object class="NSMutableDictionary" key="IBDocument.PluginVersions">
 			<string key="NS.key.0">com.apple.InterfaceBuilder.CocoaPlugin</string>
-			<string key="NS.object.0">2182</string>
+			<string key="NS.object.0">1938</string>
 		</object>
 		<array key="IBDocument.IntegratedClassDependencies">
 			<string>NSComboBoxCell</string>
@@ -57,7 +57,6 @@
 						<string key="NSFrame">{{284, 56}, {152, 32}}</string>
 						<reference key="NSSuperview" ref="1005"/>
 						<reference key="NSWindow"/>
-						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="NSEnabled">YES</bool>
 						<object class="NSButtonCell" key="NSCell" id="287737009">
 							<int key="NSCellFlags">604110336</int>
@@ -68,7 +67,6 @@
 								<double key="NSSize">13</double>
 								<int key="NSfFlags">1044</int>
 							</object>
-							<string key="NSCellIdentifier">_NS:9</string>
 							<reference key="NSControlView" ref="135497694"/>
 							<int key="NSButtonFlags">-2038284033</int>
 							<int key="NSButtonFlags2">129</int>
@@ -112,7 +110,6 @@
 										<reference key="NSSuperview" ref="75605320"/>
 										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="514565105"/>
-										<string key="NSReuseIdentifierKey">_NS:13</string>
 										<object class="NSTextContainer" key="NSTextContainer" id="915329044">
 											<object class="NSLayoutManager" key="NSLayoutManager">
 												<object class="NSTextStorage" key="NSTextStorage">
@@ -172,11 +169,9 @@
 												<integer value="1" key="NSUnderline"/>
 											</dictionary>
 											<nil key="NSDefaultParagraphStyle"/>
-											<nil key="NSTextFinder"/>
-											<int key="NSPreferredTextFinderStyle">1</int>
 										</object>
 										<int key="NSTVFlags">6</int>
-										<string key="NSMaxSize">{463, 10000000}</string>
+										<string key="NSMaxSize">{463, 1e+07}</string>
 										<string key="NSMinize">{209, 13}</string>
 										<nil key="NSDelegate"/>
 									</object>
@@ -185,7 +180,6 @@
 								<reference key="NSSuperview" ref="192246720"/>
 								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="631292772"/>
-								<string key="NSReuseIdentifierKey">_NS:11</string>
 								<reference key="NSDocView" ref="631292772"/>
 								<reference key="NSBGColor" ref="643722133"/>
 								<object class="NSCursor" key="NSCursor">
@@ -216,7 +210,6 @@
 								<reference key="NSSuperview" ref="192246720"/>
 								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="708551949"/>
-								<string key="NSReuseIdentifierKey">_NS:84</string>
 								<reference key="NSTarget" ref="192246720"/>
 								<string key="NSAction">_doScroller:</string>
 								<double key="NSCurValue">1</double>
@@ -229,7 +222,6 @@
 								<reference key="NSSuperview" ref="192246720"/>
 								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="75605320"/>
-								<string key="NSReuseIdentifierKey">_NS:33</string>
 								<int key="NSsFlags">1</int>
 								<reference key="NSTarget" ref="192246720"/>
 								<string key="NSAction">_doScroller:</string>
@@ -241,8 +233,7 @@
 						<reference key="NSSuperview" ref="1005"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="75605320"/>
-						<string key="NSReuseIdentifierKey">_NS:9</string>
-						<int key="NSsFlags">133138</int>
+						<int key="NSsFlags">18</int>
 						<reference key="NSVScroller" ref="603045329"/>
 						<reference key="NSHScroller" ref="514565105"/>
 						<reference key="NSContentView" ref="75605320"/>
@@ -254,14 +245,12 @@
 						<reference key="NSSuperview" ref="1005"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="698772897"/>
-						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="NSEnabled">YES</bool>
 						<object class="NSButtonCell" key="NSCell" id="102577961">
 							<int key="NSCellFlags">67239424</int>
 							<int key="NSCellFlags2">134217728</int>
 							<string key="NSContents">Changer d'image</string>
 							<reference key="NSSupport" ref="179825107"/>
-							<string key="NSCellIdentifier">_NS:9</string>
 							<reference key="NSControlView" ref="327195280"/>
 							<int key="NSButtonFlags">-2038284033</int>
 							<int key="NSButtonFlags2">129</int>
@@ -286,7 +275,6 @@
 						<reference key="NSSuperview" ref="1005"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="327195280"/>
-						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="NSEnabled">YES</bool>
 						<object class="NSImageCell" key="NSCell" id="827227643">
 							<int key="NSCellFlags">130560</int>
@@ -295,7 +283,6 @@
 								<string key="NSClassName">NSImage</string>
 								<string key="NSResourceName">food</string>
 							</object>
-							<string key="NSCellIdentifier">_NS:9</string>
 							<int key="NSAlign">0</int>
 							<int key="NSScale">0</int>
 							<int key="NSStyle">2</int>
@@ -310,12 +297,10 @@
 						<reference key="NSSuperview" ref="1005"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="70767263"/>
-						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="NSEnabled">YES</bool>
 						<object class="NSLevelIndicatorCell" key="NSCell" id="1001216071">
 							<int key="NSCellFlags">270663168</int>
 							<int key="NSCellFlags2">0</int>
-							<string key="NSCellIdentifier">_NS:9</string>
 							<reference key="NSControlView" ref="756355543"/>
 							<double key="NSValue">3</double>
 							<double key="NSMaxValue">5</double>
@@ -339,7 +324,6 @@
 										<reference key="NSSuperview" ref="135496203"/>
 										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="208752784"/>
-										<string key="NSReuseIdentifierKey">_NS:1828</string>
 										<bool key="NSEnabled">YES</bool>
 										<object class="NSTableHeaderView" key="NSHeaderView" id="509553691">
 											<reference key="NSNextResponder" ref="208752784"/>
@@ -348,7 +332,6 @@
 											<reference key="NSSuperview" ref="208752784"/>
 											<reference key="NSWindow"/>
 											<reference key="NSNextKeyView" ref="889712583"/>
-											<string key="NSReuseIdentifierKey">_NS:1830</string>
 											<reference key="NSTableView" ref="591236487"/>
 										</object>
 										<object class="_NSCornerView" key="NSCornerView" id="889712583">
@@ -358,7 +341,6 @@
 											<reference key="NSSuperview" ref="500945700"/>
 											<reference key="NSWindow"/>
 											<reference key="NSNextKeyView" ref="135496203"/>
-											<string key="NSReuseIdentifierKey">_NS:1833</string>
 										</object>
 										<array class="NSMutableArray" key="NSTableColumns">
 											<object class="NSTableColumn" id="20003641">
@@ -457,14 +439,12 @@
 										<int key="NSDraggingSourceMaskForNonLocal">0</int>
 										<bool key="NSAllowsTypeSelect">YES</bool>
 										<int key="NSTableViewDraggingDestinationStyle">0</int>
-										<int key="NSTableViewGroupRowStyle">1</int>
 									</object>
 								</array>
 								<string key="NSFrame">{{1, 17}, {307, 152}}</string>
 								<reference key="NSSuperview" ref="500945700"/>
 								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="591236487"/>
-								<string key="NSReuseIdentifierKey">_NS:1826</string>
 								<reference key="NSDocView" ref="591236487"/>
 								<reference key="NSBGColor" ref="610503377"/>
 								<int key="NScvFlags">4</int>
@@ -476,7 +456,6 @@
 								<reference key="NSSuperview" ref="500945700"/>
 								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="393718144"/>
-								<string key="NSReuseIdentifierKey">_NS:1845</string>
 								<reference key="NSTarget" ref="500945700"/>
 								<string key="NSAction">_doScroller:</string>
 								<double key="NSCurValue">37</double>
@@ -489,7 +468,6 @@
 								<reference key="NSSuperview" ref="500945700"/>
 								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="908321058"/>
-								<string key="NSReuseIdentifierKey">_NS:1847</string>
 								<int key="NSsFlags">1</int>
 								<reference key="NSTarget" ref="500945700"/>
 								<string key="NSAction">_doScroller:</string>
@@ -505,7 +483,6 @@
 								<reference key="NSSuperview" ref="500945700"/>
 								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="509553691"/>
-								<string key="NSReuseIdentifierKey">_NS:1831</string>
 								<reference key="NSDocView" ref="509553691"/>
 								<reference key="NSBGColor" ref="610503377"/>
 								<int key="NScvFlags">4</int>
@@ -516,8 +493,7 @@
 						<reference key="NSSuperview" ref="1005"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="135496203"/>
-						<string key="NSReuseIdentifierKey">_NS:1824</string>
-						<int key="NSsFlags">133682</int>
+						<int key="NSsFlags">562</int>
 						<reference key="NSVScroller" ref="335052194"/>
 						<reference key="NSHScroller" ref="393718144"/>
 						<reference key="NSContentView" ref="135496203"/>
@@ -532,14 +508,12 @@
 						<reference key="NSSuperview" ref="1005"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="135497694"/>
-						<string key="NSReuseIdentifierKey">_NS:2466</string>
 						<bool key="NSEnabled">YES</bool>
 						<object class="NSButtonCell" key="NSCell" id="647891064">
-							<int key="NSCellFlags">-2080244224</int>
+							<int key="NSCellFlags">-1543373312</int>
 							<int key="NSCellFlags2">134217728</int>
 							<string key="NSContents">-</string>
 							<reference key="NSSupport" ref="179825107"/>
-							<string key="NSCellIdentifier">_NS:2466</string>
 							<reference key="NSControlView" ref="343038903"/>
 							<int key="NSButtonFlags">-2033434369</int>
 							<int key="NSButtonFlags2">162</int>
@@ -556,14 +530,12 @@
 						<reference key="NSSuperview" ref="1005"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="343038903"/>
-						<string key="NSReuseIdentifierKey">_NS:2466</string>
 						<bool key="NSEnabled">YES</bool>
 						<object class="NSButtonCell" key="NSCell" id="913922356">
 							<int key="NSCellFlags">-2080244224</int>
 							<int key="NSCellFlags2">134217728</int>
 							<string key="NSContents">+</string>
 							<reference key="NSSupport" ref="179825107"/>
-							<string key="NSCellIdentifier">_NS:2466</string>
 							<reference key="NSControlView" ref="908321058"/>
 							<int key="NSButtonFlags">-2033434369</int>
 							<int key="NSButtonFlags2">162</int>
@@ -580,14 +552,12 @@
 						<reference key="NSSuperview" ref="1005"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="500945700"/>
-						<string key="NSReuseIdentifierKey">_NS:3944</string>
 						<bool key="NSEnabled">YES</bool>
 						<object class="NSTextFieldCell" key="NSCell" id="489398716">
 							<int key="NSCellFlags">68288064</int>
 							<int key="NSCellFlags2">272630784</int>
 							<string key="NSContents">Ingrédients</string>
 							<reference key="NSSupport" ref="179825107"/>
-							<string key="NSCellIdentifier">_NS:3944</string>
 							<reference key="NSControlView" ref="698772897"/>
 							<object class="NSColor" key="NSBackgroundColor" id="1020260131">
 								<int key="NSColorSpace">6</int>
@@ -605,14 +575,12 @@
 						<reference key="NSSuperview" ref="1005"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="192246720"/>
-						<string key="NSReuseIdentifierKey">_NS:3944</string>
 						<bool key="NSEnabled">YES</bool>
 						<object class="NSTextFieldCell" key="NSCell" id="883115860">
 							<int key="NSCellFlags">68288064</int>
 							<int key="NSCellFlags2">272630784</int>
 							<string key="NSContents">Instructions</string>
 							<reference key="NSSupport" ref="179825107"/>
-							<string key="NSCellIdentifier">_NS:3944</string>
 							<reference key="NSControlView" ref="70767263"/>
 							<reference key="NSBackgroundColor" ref="1020260131"/>
 							<reference key="NSTextColor" ref="267693404"/>
@@ -625,14 +593,12 @@
 						<reference key="NSSuperview" ref="1005"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="756355543"/>
-						<string key="NSReuseIdentifierKey">_NS:3944</string>
 						<bool key="NSEnabled">YES</bool>
 						<object class="NSTextFieldCell" key="NSCell" id="993059939">
 							<int key="NSCellFlags">68288064</int>
 							<int key="NSCellFlags2">272630784</int>
 							<string key="NSContents">Note</string>
 							<reference key="NSSupport" ref="179825107"/>
-							<string key="NSCellIdentifier">_NS:3944</string>
 							<reference key="NSControlView" ref="785926011"/>
 							<reference key="NSBackgroundColor" ref="1020260131"/>
 							<reference key="NSTextColor" ref="267693404"/>
@@ -645,14 +611,12 @@
 						<reference key="NSSuperview" ref="1005"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="418643224"/>
-						<string key="NSReuseIdentifierKey">_NS:3944</string>
 						<bool key="NSEnabled">YES</bool>
 						<object class="NSTextFieldCell" key="NSCell" id="962722847">
 							<int key="NSCellFlags">68288064</int>
 							<int key="NSCellFlags2">272630784</int>
 							<string key="NSContents">Catégorie</string>
 							<reference key="NSSupport" ref="179825107"/>
-							<string key="NSCellIdentifier">_NS:3944</string>
 							<reference key="NSControlView" ref="549561637"/>
 							<reference key="NSBackgroundColor" ref="1020260131"/>
 							<reference key="NSTextColor" ref="267693404"/>
@@ -665,14 +629,12 @@
 						<reference key="NSSuperview" ref="1005"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="785926011"/>
-						<string key="NSReuseIdentifierKey">_NS:708</string>
 						<bool key="NSEnabled">YES</bool>
 						<object class="NSComboBoxCell" key="NSCell" id="684743122">
 							<int key="NSCellFlags">343014976</int>
 							<int key="NSCellFlags2">272630784</int>
 							<string key="NSContents"/>
 							<reference key="NSSupport" ref="179825107"/>
-							<string key="NSCellIdentifier">_NS:708</string>
 							<reference key="NSControlView" ref="418643224"/>
 							<bool key="NSDrawsBackground">YES</bool>
 							<object class="NSColor" key="NSBackgroundColor" id="896259442">
@@ -696,7 +658,6 @@
 								<string key="NSFrameSize">{13, 63}</string>
 								<reference key="NSSuperview"/>
 								<reference key="NSWindow"/>
-								<string key="NSReuseIdentifierKey">_NS:738</string>
 								<bool key="NSEnabled">YES</bool>
 								<array class="NSMutableArray" key="NSTableColumns">
 									<object class="NSTableColumn">
@@ -747,7 +708,6 @@
 								<int key="NSDraggingSourceMaskForNonLocal">0</int>
 								<bool key="NSAllowsTypeSelect">YES</bool>
 								<int key="NSTableViewDraggingDestinationStyle">0</int>
-								<int key="NSTableViewGroupRowStyle">1</int>
 							</object>
 						</object>
 					</object>
@@ -758,14 +718,12 @@
 						<reference key="NSSuperview" ref="1005"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="549561637"/>
-						<string key="NSReuseIdentifierKey">_NS:903</string>
 						<bool key="NSEnabled">YES</bool>
 						<object class="NSTextFieldCell" key="NSCell" id="439139280">
 							<int key="NSCellFlags">-1804468671</int>
 							<int key="NSCellFlags2">272630784</int>
 							<string key="NSContents"/>
 							<reference key="NSSupport" ref="179825107"/>
-							<string key="NSCellIdentifier">_NS:903</string>
 							<reference key="NSControlView" ref="756461380"/>
 							<bool key="NSDrawsBackground">YES</bool>
 							<reference key="NSBackgroundColor" ref="896259442"/>
@@ -784,14 +742,12 @@
 						<reference key="NSSuperview" ref="1005"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="756461380"/>
-						<string key="NSReuseIdentifierKey">_NS:3944</string>
 						<bool key="NSEnabled">YES</bool>
 						<object class="NSTextFieldCell" key="NSCell" id="578871162">
 							<int key="NSCellFlags">68288064</int>
 							<int key="NSCellFlags2">272630784</int>
 							<string key="NSContents">Nom</string>
 							<reference key="NSSupport" ref="179825107"/>
-							<string key="NSCellIdentifier">_NS:3944</string>
 							<reference key="NSControlView" ref="1011937403"/>
 							<reference key="NSBackgroundColor" ref="1020260131"/>
 							<reference key="NSTextColor" ref="267693404"/>
