--- a/Cookie/Cookie/CKRecipeEditionView.xib
+++ b/Cookie/Cookie/CKRecipeEditionView.xib
@@ -48,7 +48,7 @@
 				<string key="NSClassName">NSApplication</string>
 			</object>
 			<object class="NSCustomObject" id="919580363">
-				<string key="NSClassName">CKRecipeEditionViewController</string>
+				<string key="NSClassName">CKIngredientDataSource</string>
 			</object>
 			<object class="NSCustomView" id="1005">
 				<reference key="NSNextResponder"/>
@@ -348,6 +348,7 @@
 										</object>
 										<array class="NSMutableArray" key="NSTableColumns">
 											<object class="NSTableColumn" id="20003641">
+												<string key="NSIdentifier">quantity</string>
 												<double key="NSWidth">64.5859375</double>
 												<double key="NSMinWidth">40</double>
 												<double key="NSMaxWidth">1000</double>
@@ -396,6 +397,7 @@
 												<reference key="NSTableView" ref="591236487"/>
 											</object>
 											<object class="NSTableColumn" id="480215511">
+												<string key="NSIdentifier">measure</string>
 												<double key="NSWidth">236</double>
 												<double key="NSMinWidth">40</double>
 												<double key="NSMaxWidth">1000</double>
@@ -801,14 +803,6 @@
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBOutletConnection" key="connection">
-						<string key="label">ingredientsTable</string>
-						<reference key="source" ref="1001"/>
-						<reference key="destination" ref="591236487"/>
-					</object>
-					<int key="connectionID">925</int>
-				</object>
-				<object class="IBConnectionRecord">
-					<object class="IBOutletConnection" key="connection">
 						<string key="label">ratingIndicator</string>
 						<reference key="source" ref="1001"/>
 						<reference key="destination" ref="756355543"/>
@@ -865,11 +859,11 @@
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBOutletConnection" key="connection">
-						<string key="label">delegate</string>
-						<reference key="source" ref="591236487"/>
-						<reference key="destination" ref="919580363"/>
+						<string key="label">ingredientsTable</string>
+						<reference key="source" ref="1001"/>
+						<reference key="destination" ref="591236487"/>
 					</object>
-					<int key="connectionID">1147</int>
+					<int key="connectionID">1154</int>
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBOutletConnection" key="connection">
@@ -877,7 +871,15 @@
 						<reference key="source" ref="591236487"/>
 						<reference key="destination" ref="919580363"/>
 					</object>
-					<int key="connectionID">1148</int>
+					<int key="connectionID">1158</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBOutletConnection" key="connection">
+						<string key="label">delegate</string>
+						<reference key="source" ref="591236487"/>
+						<reference key="destination" ref="919580363"/>
+					</object>
+					<int key="connectionID">1159</int>
 				</object>
 			</array>
 			<object class="IBMutableOrderedSet" key="objectRecords">
@@ -1184,7 +1186,7 @@
 						<reference key="parent" ref="135497694"/>
 					</object>
 					<object class="IBObjectRecord">
-						<int key="objectID">1144</int>
+						<int key="objectID">1151</int>
 						<reference key="object" ref="919580363"/>
 						<reference key="parent" ref="0"/>
 					</object>
@@ -1198,7 +1200,7 @@
 				<string key="11.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="1113.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="1114.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
-				<string key="1144.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
+				<string key="1151.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="12.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="13.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="14.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
@@ -1245,10 +1247,18 @@
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">1148</int>
+			<int key="maxID">1159</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
+				<object class="IBPartialClassDescription">
+					<string key="className">CKIngredientDataSource</string>
+					<string key="superclassName">NSObject</string>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/CKIngredientDataSource.h</string>
+					</object>
+				</object>
 				<object class="IBPartialClassDescription">
 					<string key="className">CKRecipeEditionViewController</string>
 					<string key="superclassName">NSViewController</string>
